# Go2-Inspector

./: CMakeLists.txt  README.md  deps.repos  package.xml
config/: go2_view.rviz  nav2_params.yaml  nav2_params_rtabmap.yaml  nav2_view.rviz  slam_view.rviz
go2Navigation/: CMakeLists.txt  package.xml
go2_navigation/: CMakeLists.txt  package.xml
go2_navigation/launch/: check_joint.rviz  gazebo.launch.xml  go2_rviz.launch.xml
go2_navigation/src/: go2SportTest.cpp  odom_tf_bridge.cpp
go2_navigation/urdf/: go2_navigation.urdf.xacro
go2_navigation/xacro/: gazebo.xacro  leg.xacro  robot.xacro
launch/: camera_restampers.launch.xml  gazebo.launch.xml  go2_rviz.launch.xml  slam.launch.py  slam.launch.xml  slam_nav.launch.py  slam_nav.launch.xml  slam_nav_rtabmap.launch.xml  test_navigation.launch.xml
scripts/: camera_info_restamper.py  camera_sync_restamper.py  change_detector.py  depth_sync_restamper.py  image_restamper.py  inspection_node.py  inspection_report.py  inspection_report_llm.py  laserscan_restamper.py  map_export.py  ply_marker_injector.py  pointcloud_restamper.py  watchdog_run.py
src/: cmdvel_to_sport_bridge.cpp  frontier_explorer.cpp  joint_state_bridge.cpp  navigation_node.cpp  odom_tf_bridge.cpp  pointcloud_refiner.cpp  pointcloud_to_scan.cpp  test_movement_node.cpp
