<?xml version="1.0"?>
<package format="3">
  <name>go2_navigation</name>
  <version>0.0.0</version>
  <description>Unitree Go2 SDK test</description>
  <maintainer email="amberhandal2026@u.northwestern.edu">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS 2 -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Robot description -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- SLAM -->
  <exec_depend>rtabmap_ros</exec_depend>

  <!-- Navigation -->
  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <!-- Point cloud / laser processing -->
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>depthimage_to_laserscan</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <!-- Camera -->
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>realsense2_description</exec_depend>

  <!-- Visualization -->
  <exec_depend>rviz2</exec_depend>

  <!-- Unitree SDK -->
  <depend>unitree_api</depend>
  <depend>unitree_go</depend>
  <depend>unitree_hg</depend>
  <build_depend>unitree_sdk2</build_depend>
  <exec_depend>unitree_sdk2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
