<?xml version="1.0"?>
<package format="3">
  <name>go2_navigation</name>
  <version>0.0.0</version>
  <description>Unitree Go2 SDK test</description>
  <maintainer email="you@todo.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <depend>unitree_api</depend>
  <depend>unitree_go</depend>
  <depend>unitree_hg</depend>
  <depend>unitree_sdk2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
